--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
   
  <body>
-   <h1><img src='/default-logo.png' alt='main logo' style="float:left;width:96px;height:96px">Revnoplex</h1>
+   <h1><img src='/media/images/default-logo.png' alt='main logo' style="float:left;width:96px;height:96px">Revnoplex</h1>
+   <br>
    <hr>
   </body>
 </html>
