--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <title>404 - file not found</title>
   </head>
   <body style="text-align: center;">
-    <h1><img src='/default-logo.png' alt='main logo' style="float:left;width:96px;height:96px"  usemap="#workmap">404! file/page not found</h1>
+    <h1><img src='/media/images/default-logo.png' alt='main logo' style="float:left;width:96px;height:96px"  usemap="#workmap">404! file/page not found</h1>
     <br>
     <h4>The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h4>
     <map name="workmap">
