--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel = "icon" href="/media/images/default-logo.png"/>
 <title>Revnoplex</title>
 </head>
   
