--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel = "icon" href="/media/images/default-black.png"/>
     <title>404 - file not found</title>
   </head>
   <body style="text-align: center;">
