--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    <h1><img src='/media/images/default-large.png' alt='main logo' style="float:left;width:96px;height:96px">Revnoplex</h1>
    <br>
    <hr>
-   <p><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw">Youtube</a>  <a href='https://www.twitter.com/revnoplex'>Twitter</a></p>
+   <p style="text-align:center;"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw">Youtube</a>  <a href='https://www.twitter.com/revnoplex'>Twitter</a></p>
   </body>
 </html>
