--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    <h1><img src='/media/images/default-large.png' alt='main logo' style="float:left;width:96px;height:96px">Revnoplex</h1>
    <br>
    <hr>
-   <p style="text-align:center;"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw">Youtube</a>    <a href='https://www.twitter.com/revnoplex'>Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands">Discord Bot</a></p>
+   <p style="text-align:center;"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw">Youtube</a>    <a href='https://www.twitter.com/revnoplex'>Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex">twitch</a></p>
   </body>
 </html>
