--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h1><img src='/media/images/default-large.png' alt='main logo' style="float:left;width:96px;height:96px">Revnoplex</h1>
    <br>
    <hr>
-   <p style="text-align:center; font-size: 15px;"><a href="/media/images/yt_logo_s.svg" alt="youtube-logo" width="32" height="32">Youtube</a>    <a href='https://www.twitter.com/revnoplex'>Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex">Twitch</a></p>
+   <p style="text-align:center; font-size: 15px;"><a href="/media/images/yt_logo.png" alt="youtube-logo" width="32" height="32">Youtube</a>    <a href='https://www.twitter.com/revnoplex'>Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex">Twitch</a></p>
    <br>
    <div class="vid" style="text-align:center;">
    <iframe width="852" height="480" src="https://www.youtube.com/embed/dqkSXYc7iCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
