--- a/404.html
+++ b/404.html
@@ -6,7 +6,11 @@
     <title>404 - file not found</title>
   </head>
   <body style="text-align: center;">
-    <h1><img src='/media/images/default-logo.png' alt='main logo' style="float:left;width:96px;height:96px"  usemap="#workmap">404! file/page not found</h1>
+    <h1><img src='/media/images/default-large.png' alt='main logo' width="96" height="96" usemap="#workmap"> <a class="logo" href="/">Revnoplex</a></h1>
+   <p style="text-align:center; font-size: 15px;"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw"><img src="/media/images/yt_logo.svg" alt="youtube-logo" width="32" height="32">Youtube</a>    <a href='https://www.twitter.com/revnoplex'><img src="/media/images/twitter_logo.svg" alt="twitter-logo" width="32" height="32">Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands"><img src="/media/images/discord_logo.svg" alt="discord-logo" width="32" height="32">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex"><img src="/media/images/twitch_logo.svg" alt="twitch-logo" width="32" height="32">Twitch</a>    <a href="https://github.com/revnoplex"><img src="/media/images/github_logo.svg" alt="github-logo" width="32" height="32">Github</a>    </p>
+   <hr>
+   <br>
+    <h2>404! file/page not found</h2>
     <br>
     <h4>The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h4>
     <map name="workmap">
