--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
    <p style="text-align:center; font-size: 15px;"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw"><img src="/media/images/yt_logo.svg" alt="youtube-logo" width="32" height="32">Youtube</a>    <a href='https://www.twitter.com/revnoplex'><img src="/media/images/twitter_logo.svg" alt="twitter-logo" width="32" height="32">Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands"><img src="/media/images/discord_logo.svg" alt="discord-logo" width="32" height="32">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex"><img src="/media/images/twitch_logo.svg" alt="twitch-logo" width="32" height="32">Twitch</a>    <a href="https://github.com/revnoplex"><img src="/media/images/github_logo.svg" alt="github-logo" width="32" height="32">Github</a>    </p>
    <hr>
    <br>
-    <h2>404! file/page not found</h2>
+    <h2 style="color: white;">404! file/page not found</h2>
     <br>
     <h4>The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h4>
     <map name="workmap">
