--- a/404.html
+++ b/404.html
@@ -5,10 +5,11 @@
     <link rel = "icon" href="/media/images/default-black.png"/>
     <title>404 - file not found</title>
   </head>
-  <body style="text-align: center;">
+  <body>
     <h1><img src='/media/images/default-large.png' alt='main logo' width="96" height="96"> Revnoplex <span class="title-links"><a href="https://www.youtube.com/channel/UC1VSDiiRQZRTbxNvWhIrJfw"><img src="/media/images/yt_logo.svg" alt="youtube-logo" width="32" height="32">Youtube</a>    <a href='https://www.twitter.com/revnoplex'><img src="/media/images/twitter_logo.svg" alt="twitter-logo" width="32" height="32">Twitter</a>    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io&scope=bot%20applications.commands"><img src="/media/images/discord_logo.svg" alt="discord-logo" width="32" height="32">Discord Bot</a>    <a href="https://twitch.tv/Revnoplex"><img src="/media/images/twitch_logo.svg" alt="twitch-logo" width="32" height="32">Twitch</a>    <a href="https://github.com/revnoplex"><img src="/media/images/github_logo.svg" alt="github-logo" width="32" height="32">Github</a>    </span></h1>
    <hr>
    <br>
+   <div style="text-align: center;">
     <h2 style="color: white;">404! file/page not found</h2>
     <br>
     <h4>The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h4>
@@ -20,5 +21,6 @@
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
     </script>
+    </div>
   </body>
 </html>
