--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -6,5 +6,5 @@
 <title>Revnoplex</title>
 </head>
 <body>
-    
+
 </body>
