--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
   
  <body>
-  <script src="title.js"></script>   
+  <script src="/title.js"></script>   
    <br>
    <p>this page is still in development</p>
    <div class="vid" style="text-align:center;">
    <iframe width="852" height="480" src="https://www.youtube.com/embed/dqkSXYc7iCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
+   <script src="/footer.js"></script>
   </body>
 </html>
