--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@
     <title>404 - file not found</title>
   </head>
   <body>
-    <script src="title.js"></script>
+    <script src="/title.js"></script>
    <br>
    <div style="text-align: center;">
-    <h2 style="color: white;">404! file/page not found</h2>
+    <h1 style="color: white;">404! file/page not found</h1>
     <br>
     <h4>The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h4>
     <map name="workmap">
@@ -21,5 +21,6 @@
     document.getElementById("bold").innerHTML = window.location.href;
     </script>
     </div>
+    <script src="/footer.js"></script>
   </body>
 </html>
