--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -7,4 +7,7 @@
 </head>
 <body>
     <script src="/title.js"></script>
+    <br>
+    <h1>Thanks For adding revnobot</h1>
+    <script src="/footer.js"></script>
 </body>
