--- a/404.html
+++ b/404.html
@@ -8,20 +8,35 @@
   <body>
     <script src="/title.js"></script>
    <br>
+   <pre>
    <div style="text-align: center;">
     <h1 style="color: white;">404! file/page not found</h1>
     <br>
-    <br>
+
+
+
+
+
+
+
     <h2 style="text-align: center;">The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h2>
     <map name="workmap">
   <area shape="default" coords="0,0,0,0" alt="revnoplex" href="/">
 </map>
     <br>
+
+
+
+
+
+
+    
     <h4><a href="/">Go Back To Main Page</a></h4>
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
     </script>
     </div>
     <script src="/footer.js"></script>
+    </pre>
   </body>
 </html>
