--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <body>
     <script src="/title.js"></script>
    <br>
-   <pre>
+   <pre style="font-family: sans-serif;">
    <div style="text-align: center;">
     <h1 style="color: white;">404! file/page not found</h1>
     <br>
@@ -30,7 +30,7 @@
 
 
 
-    
+
     <h4><a href="/">Go Back To Main Page</a></h4>
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
