--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -8,6 +8,6 @@
 <body>
     <script src="/title.js"></script>
     <br>
-    <h1>Thanks For adding revnobot</h1>
+    <h1 style="text-align: center;">Thanks For adding revnobot</h1>
     <script src="/footer.js"></script>
 </body>
