--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <script src="/title.js"></script>
-    <br>
+    <pre style="font-family: sans-serif;">
     <br>
     <h1 style="text-align: center;">Thanks For adding revnobot</h1>
     <script src="/footer.js"></script>
+    </pre>
 </body>
