--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="/title.js"></script>
-    <pre style="font-family: sans-serif;">
+    <pre>
     <br>
     <h1 style="text-align: center;">Thanks For adding revnobot</h1>
     <script src="/footer.js"></script>
