--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   
  <body>
   <script src="/title.js"></script>   
-   <br>
+   <pre>
    <br>
    <p>this page is still in development</p>
    <div class="vid" style="text-align:center;">
    <iframe width="852" height="480" src="https://www.youtube.com/embed/dqkSXYc7iCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <script src="/footer.js"></script>
+  </pre>
   </body>
 </html>
