--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
   <body>
     <script src="/title.js"></script>
    <br>
-   <pre style="font-family: sans-serif;">
-   <div style="text-align: center;">
+   <pre>
+   
     <h1 style="color: white;">404! file/page not found</h1>
     <br>
     <h2 style="text-align: center;">The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h2>
@@ -18,7 +18,6 @@
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
     </script>
-    </div>
     <script src="/footer.js"></script>
     </pre>
   </body>
