--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
    <br>
    <pre>
    
-    <h1 style="color: white;">404! file/page not found</h1>
+    <h1 style="text-align: center;">404! file/page not found</h1>
     <br>
     <h2 style="text-align: center;">The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h2>
     <h4><a href="/">Go Back To Main Page</a></h4>
