--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <br>
    <pre>
   
-   <p>this page is still in development. Last updated: (insert push date here)</p>
+   <p>this page is still in development. Last updated: 11/5/2021</p>
 
    <h1>Latest Video:</h1>
    <div class="vid" style="text-align:center;">
