--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <iframe width="852" height="480" src="https://www.youtube.com/embed/AcIZE-PFWM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <h1>Latest Tweet:</h1>
-   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Don&#39;t <a href="https://t.co/LsDm6OBUj5">pic.twitter.com/LsDm6OBUj5</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1387767959725215756?ref_src=twsrc%5Etfw">April 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Don&#39;t <a href="https://t.co/LsDm6OBUj5">pic.twitter.com/LsDm6OBUj5</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1387767959725215756?ref_src=twsrc%5Etfw">April 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
    <script src="/footer.js"></script>
   </pre>
   </body>
