--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -10,7 +10,7 @@
     <br>
     <pre>
     
-    <h1 style="text-align: center;">Thanks For adding revnobot</h1>
+    <h1 style="text-align: center;">Thanks For adding Revnobot</h1>
 
     
     <script src="/footer.js"></script>
