--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    <div class="vid" style="display:inline-block;">
    <h1>Latest Video:</h1>
-   <iframe width="852" height="480" src="https://www.youtube.com/embed/qQ54vopqoEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="852" height="480" src="https://www.youtube.com/embed/EuT2Fyffx_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <div style="display: inline-block;"></div>
    <h1>Latest Tweet:</h1>
