--- a/downloads/index.html
+++ b/downloads/index.html
@@ -12,6 +12,8 @@
     
     <h1 style="text-align: center;">Download Center Coming Soon</h1>
 
+    <a href="/media/downloads/videos/gamecube.mp4" download>test download</a>
+
     
     <script src="/footer.js"></script>
     </pre>
