--- a/downloads/index.html
+++ b/downloads/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <link rel = "icon" href="/media/images/default-black.png"/>
-<title>Revnoplex</title>
+<title>Download Center</title>
 </head>
 <body>
     <script src="/title.js"></script>
