--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    </div>
    <div style="display: inline-block;"></div>
    <h1>Latest Tweet:</h1>
-   <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Don&#39;t <a href="https://t.co/LsDm6OBUj5">pic.twitter.com/LsDm6OBUj5</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1401674975652704257?ref_src=twsrc%5Etfw">April 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
+   <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">lets gooooo <a href="https://t.co/W3dElZ8txo">pic.twitter.com/W3dElZ8txo</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1401674975652704257?ref_src=twsrc%5Etfw">April 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
    <script src="/footer.js"></script>
   </pre>
   </body>
