--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    </div>
    <div style="display: inline-block; text-align: center;"></div>
    <h1>Latest Tweet:</h1>
-   <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">lets gooooo <a href="https://t.co/W3dElZ8txo">pic.twitter.com/W3dElZ8txo</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1401674975652704257?ref_src=twsrc%5Etfw">April 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-   </div>
+   <blockquote class="twitter-tweet" data-theme="dark"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/windows?src=hash&amp;ref_src=twsrc%5Etfw">#windows</a> <a href="https://twitter.com/hashtag/windowsxp?src=hash&amp;ref_src=twsrc%5Etfw">#windowsxp</a> <a href="https://twitter.com/hashtag/virtualbox?src=hash&amp;ref_src=twsrc%5Etfw">#virtualbox</a> <a href="https://twitter.com/hashtag/virtualmachine?src=hash&amp;ref_src=twsrc%5Etfw">#virtualmachine</a> <a href="https://twitter.com/hashtag/rdp?src=hash&amp;ref_src=twsrc%5Etfw">#rdp</a> <a href="https://twitter.com/hashtag/remotedesktop?src=hash&amp;ref_src=twsrc%5Etfw">#remotedesktop</a> <a href="https://twitter.com/hashtag/graphics?src=hash&amp;ref_src=twsrc%5Etfw">#graphics</a> <a href="https://twitter.com/hashtag/bug?src=hash&amp;ref_src=twsrc%5Etfw">#bug</a> <a href="https://twitter.com/hashtag/glitch?src=hash&amp;ref_src=twsrc%5Etfw">#glitch</a> <a href="https://twitter.com/hashtag/pinball?src=hash&amp;ref_src=twsrc%5Etfw">#pinball</a> <a href="https://t.co/EVrun8Do6H">pic.twitter.com/EVrun8Do6H</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1408336669338587136?ref_src=twsrc%5Etfw">June 25, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
    <script src="/footer.js"></script>
   </pre>
   </body>
