--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
    <div class="vid" style="display:inline-block;">
    <h1>Latest Video:</h1>
-   <iframe width="852" height="480" src="https://www.youtube.com/embed/CY3NcjUV5hQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="852" height="480" src="https://www.youtube.com/embed/lragGcxyXwg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <div style="display: inline-block; text-align: center;"></div>
    <h1>Latest Tweet:</h1>
-   <blockquote class="twitter-tweet" data-theme="dark"><p lang="und" dir="ltr"><a href="https://twitter.com/hashtag/windows?src=hash&amp;ref_src=twsrc%5Etfw">#windows</a> <a href="https://twitter.com/hashtag/windowsxp?src=hash&amp;ref_src=twsrc%5Etfw">#windowsxp</a> <a href="https://twitter.com/hashtag/virtualbox?src=hash&amp;ref_src=twsrc%5Etfw">#virtualbox</a> <a href="https://twitter.com/hashtag/virtualmachine?src=hash&amp;ref_src=twsrc%5Etfw">#virtualmachine</a> <a href="https://twitter.com/hashtag/rdp?src=hash&amp;ref_src=twsrc%5Etfw">#rdp</a> <a href="https://twitter.com/hashtag/remotedesktop?src=hash&amp;ref_src=twsrc%5Etfw">#remotedesktop</a> <a href="https://twitter.com/hashtag/graphics?src=hash&amp;ref_src=twsrc%5Etfw">#graphics</a> <a href="https://twitter.com/hashtag/bug?src=hash&amp;ref_src=twsrc%5Etfw">#bug</a> <a href="https://twitter.com/hashtag/glitch?src=hash&amp;ref_src=twsrc%5Etfw">#glitch</a> <a href="https://twitter.com/hashtag/pinball?src=hash&amp;ref_src=twsrc%5Etfw">#pinball</a> <a href="https://t.co/EVrun8Do6H">pic.twitter.com/EVrun8Do6H</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1408336669338587136?ref_src=twsrc%5Etfw">June 25, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    <blockquote class="twitter-tweet" data-theme="dark"><p lang="und" dir="ltr"><a href="https://t.co/C8ctmNqz27">https://t.co/C8ctmNqz27</a><a href="https://twitter.com/hashtag/citraemu?src=hash&amp;ref_src=twsrc%5Etfw">#citraemu</a> <a href="https://twitter.com/hashtag/emulation?src=hash&amp;ref_src=twsrc%5Etfw">#emulation</a> <a href="https://twitter.com/hashtag/3ds?src=hash&amp;ref_src=twsrc%5Etfw">#3ds</a> <a href="https://twitter.com/hashtag/LuigisMansion2?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansion2</a> <a href="https://twitter.com/hashtag/LuigisMansionDarkMoon?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansionDarkMoon</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1415317030434009094?ref_src=twsrc%5Etfw">July 14, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
    <script src="/footer.js"></script>
   </pre>
   </body>
