added gamecube system menu files

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -10,10 +10,15 @@
     <br>
     <pre>
     
-    <h1 style="text-align: center;">Download Center Coming Soon</h1>
+    <h1 style="text-align: center;">Download Center</h1>
 
     <a href="/media/downloads/videos/gamecube.mp4" download>test download</a>
 
+    <h2 style="text-align: center;">Gamecube System menu</h1>
+
+    <a href="/media/downloads/gamecube system menu/NTSC/IPL.bin" download>IPL.bin - NTSC (US and JP regions)</a>
+
+    <a href="/media/downloads/gamecube system menu/PAL/IPL.bin" download>IPL.bin - PAL (EU region)</a>
     
     <script src="/footer.js"></script>
     </pre>
