--- a/downloads/index.html
+++ b/downloads/index.html
@@ -15,7 +15,7 @@
     <a href="/media/downloads/videos/gamecube.mp4" download>test download</a>
 
     <h2 style="text-align: center;">Gamecube System menu</h2>
-    <p><b>Instructions:</b> In Dolphin Emulator under /GC Paste the corresponding IPL.bin into the region folder based on its region/Video Technology. Example: if you downloaded the PAL version, Paste it in the /GC/EUR folder. In dolphin versions 5.0 to 5.0-3899 Under the configuration menu and under the "GameCube" tab, make sure "Skip Main Menu" is unchecked to make gamecube game boot through the menu upon startup. In dolphin 5.0-3902 or later the option "Skip BIOS" is called "Skip Main Menu" and the menu can also be manually be run under Tools, Load GameCube Main Menu. see more at <a href="https://wiki.dolphin-emu.org/index.php?title=GameCube_Main_Menu">GameCube Main Menu - Dolphin Emulator Wiki</a></p> 
+    <p><b>Instructions:</b> In Dolphin Emulator under /GC Paste the corresponding IPL.bin into the region folder based on its region/Video Technology. <br>Example: if you downloaded the PAL version, Paste it in the /GC/EUR folder. <br>In dolphin versions 5.0 to 5.0-3899 Under the configuration menu and under the "GameCube" tab, make sure "Skip Main Menu" is unchecked to make gamecube game boot through the menu upon startup. <br>In dolphin 5.0-3902 or later the option "Skip BIOS" is called "Skip Main Menu" and the menu can also be manually be run under Tools, Load GameCube Main Menu. <br>see more at <a href="https://wiki.dolphin-emu.org/index.php?title=GameCube_Main_Menu">GameCube Main Menu - Dolphin Emulator Wiki</a></p> 
    
    <a href="/media/downloads/gamecube system menu/NTSC/IPL.bin" download>IPL.bin - NTSC (USA and JAP regions)</a>
 
