updated add bot link

--- a/bot/index.html
+++ b/bot/index.html
@@ -10,10 +10,10 @@
     <br>
     <pre>
     
-    <h1 style="text-align: center;">Terms of use</h1>
+    <h1 style="text-align: center;">Add Bot to Server</h1>
 
-    <p>There are a few conditons on adding the bot to your server:<br>- Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this rule is in place just in case the cooldown doesnt work.<br>- Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately and do not give any commands to the bot until i say its fixed.<br>The bot has measurements in place to leave and blacklist an offending server</p>
-    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io%2Fadded-bot&response_type=code&scope=bot%20guilds%20applications.commands">click here to add bot to server</a>
+    <p>There are a few conditons on adding the bot to your server:<br>- Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.<br>- Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately and do not give any commands to the bot until i say its fixed.<br>The bot has measurements in place to leave and blacklist an offending server</p>
+    <a href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=4294967295&redirect_uri=https%3A%2F%2Frevnoplex.github.io%2Fadded-bot&response_type=code&scope=bot%20guilds%20applications.commands">Click Here to Add Bot to Server</a>
 
     
     <script src="/footer.js"></script>
