--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
    <div class="vid" style="display:inline-block;">
    <h1>Latest Video:</h1>
-   <iframe width="852" height="480" src="https://www.youtube.com/embed/lragGcxyXwg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="852" height="480" src="https://www.youtube.com/embed/es4wDxR9Njg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <div style="display: inline-block; text-align: center;"></div>
    <h1>Latest Tweet:</h1>
-    <blockquote class="twitter-tweet" data-theme="dark"><p lang="und" dir="ltr"><a href="https://t.co/C8ctmNqz27">https://t.co/C8ctmNqz27</a><a href="https://twitter.com/hashtag/citraemu?src=hash&amp;ref_src=twsrc%5Etfw">#citraemu</a> <a href="https://twitter.com/hashtag/emulation?src=hash&amp;ref_src=twsrc%5Etfw">#emulation</a> <a href="https://twitter.com/hashtag/3ds?src=hash&amp;ref_src=twsrc%5Etfw">#3ds</a> <a href="https://twitter.com/hashtag/LuigisMansion2?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansion2</a> <a href="https://twitter.com/hashtag/LuigisMansionDarkMoon?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansionDarkMoon</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1415317030434009094?ref_src=twsrc%5Etfw">July 14, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">how did i get 100+ subs in under 2 months <a href="https://t.co/RYifnOCewE">pic.twitter.com/RYifnOCewE</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1421792386645053444?ref_src=twsrc%5Etfw">August 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
    </div>
    <script src="/footer.js"></script>
   </pre>
