Center Latest Tweet

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <br>
     <pre>
 
-   <p>this page is still in development. Last updated: 21/7/2021</p>
+      <p>this page is still in development. Last updated: 21/7/2021</p>
 
-   <div class="vid" style="display:inline-block;">
-   <h1>Latest Video:</h1>
-   <iframe width="852" height="480" src="https://www.youtube.com/embed/es4wDxR9Njg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div style="display: inline-block; text-align: center;"></div>
-   <h1>Latest Tweet:</h1>
-    <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">how did i get 100+ subs in under 2 months <a href="https://t.co/RYifnOCewE">pic.twitter.com/RYifnOCewE</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1421792386645053444?ref_src=twsrc%5Etfw">August 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-   </div>
-   <script src="/footer.js"></script>
-  </pre>
+      <div class="vid" style="display:inline-block;">
+        <h1>Latest Video:</h1>
+        <iframe width="852" height="480" src="https://www.youtube.com/embed/es4wDxR9Njg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div style="display: inline-block; text-align: center;">
+        <h1>Latest Tweet:</h1>
+        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">how did i get 100+ subs in under 2 months <a href="https://t.co/RYifnOCewE">pic.twitter.com/RYifnOCewE</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1421792386645053444?ref_src=twsrc%5Etfw">August 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+      <script src="/footer.js"></script>
+    </pre>
   </body>
 
 </html>
