fixed button links

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <br>
     
     <h2 style="text-align: center;">The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h2>
-    <h4><a href="/">Go Back To Main Page</a></h4>
+    <h4><a class="btn" href="/">Go Back To Main Page</a></h4>
     
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
