--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="vid" style="display:inline-block;">
         <h1>Latest Video:</h1>
-        <iframe width="852" height="480" src="https://www.youtube.com/embed/SURLHM8q5AU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="852" height="480" src="https://www.youtube.com/embed/RvfG-aNr5Ew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div style="display: inline-block; text-align: center;">
         <h1>Latest Tweet:</h1>
