--- a/fun/index.html
+++ b/fun/index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
-    <title>404 - file not found</title>
+    <title>Gottem</title>
   </head>
 
   <body>
