--- a/fun/index.html
+++ b/fun/index.html
@@ -17,7 +17,7 @@
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
-        Sorry, your browser doesn't support embedded videos.
+        Update ur browser so i can rickroll you
     </video>
     
     <script src="/footer.js"></script>
