--- a/fun/index.html
+++ b/fun/index.html
@@ -17,7 +17,7 @@
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
-        Update ur browser so i can rickroll you
+        Your browser does not support rickrolls. Update ur browser smh.
     </video>
     
     <script src="/footer.js"></script>
