attempt to make rickroll play on mobile

--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,7 @@
     <br>
     <pre>
 
-    <video autoplay loop width="852" height="480">
+    <video playsinline autoplay loop width="852" height="480">
 
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
