--- a/fun/index.html
+++ b/fun/index.html
@@ -4,16 +4,15 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
-    <title>Gottem</title>
+    <title>Get Rickrolled</title>
   </head>
 
   <body>
     <script src="/title.js"></script>
     <br>
     <pre>
-
+    <h4>Don't click on sussy links. You might of just only been rickrolled this time but you might as lucky next time</h4>
     <video playsinline autoplay loop width="720" height="576">
-
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
