update esafety message

--- a/fun/index.html
+++ b/fun/index.html
@@ -11,14 +11,14 @@
     <script src="/title.js"></script>
     <br>
     <pre>
-    <h4>Don't click on sussy links. You might of just only been rickrolled this time but you might as lucky next time</h4>
-    <video playsinline autoplay loop width="720" height="576">
+    <h1>Don't click on sussy links.</h1>
+    <video playsinline autoplay loop width="auto" height="auto">
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
         Your browser does not support rickrolls. Update ur browser smh.
     </video>
-    
+    <p>You might have been lucky and only got rickrolled this time, but you might not be the next.<br>Don't click on links that look too good to be true</p>
     <script src="/footer.js"></script>
     </pre>
   </body>
