--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,7 @@
     <br>
     <pre>
     <h1>Don't click on sussy links.</h1>
-    <video playsinline autoplay loop width="auto" height="auto">
+    <video playsinline autoplay loop width="auto" height="100%">
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
