--- a/fun/index.html
+++ b/fun/index.html
@@ -12,13 +12,13 @@
     <br>
     <pre>
     <h1>Don't click on sussy links.</h1>
-    <video playsinline autoplay loop width="auto" height="100%">
+    <video playsinline autoplay loop class='rickroll'>
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
     
         Your browser does not support rickrolls. Update ur browser smh.
     </video>
-    <p>You might have been lucky and only got rickrolled this time, but you might not be the next.<br>Don't click on links that look too good to be true</p>
+    <p>You might have been lucky and only got rickrolled this time, but you might not be so the next time.<br>Don't click on links that look too good to be true</p>
     <script src="/footer.js"></script>
     </pre>
   </body>
