--- a/fun/index.html
+++ b/fun/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="3; url='/fun'" />
+    <meta http-equiv="refresh" content="3; url='/fun/redirect.html'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Redirecting....</title>
