--- a/media/downloads/gamecube system menu/PAL/index.html
+++ b/media/downloads/gamecube system menu/PAL/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="refresh" content="0; url='/media/downloads/gamecube%20system%20menu/PAL/IPL.bin'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
-    <title>Redirecting....</title>
+    <title>Downloading File....</title>
   </head>
 <body>
-    <p>You should't be here</p>
+    <p>Downloading File....</p>
 </body>
