--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="/title.js"></script>
-    <noscript>javascript must be enabled to properly display this page</noscript>
+    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
     
