--- a/fun/index.html
+++ b/fun/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <script src="/title.js"></script>
-    <noscript>javascript must be enabled to properly display this page</noscript>
+    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
     <h1>Don't click on sussy links.</h1>
