--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+    <meta http-equiv="refresh" content="0; url='/'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>404 - file not found</title>
@@ -17,6 +18,7 @@
     <br>
     
     <h2 style="text-align: center;">The file or page <i id="bold" style="color:rgb(0, 255, 0);"></i> does not exist here. check there are no typos in your url</h2>
+    <h4>Redirecting to main page in 10 seconds....</h4>
     <h4><a class="btn" href="/">Go Back To Main Page</a></h4>
     
     <script>
