test for new add bot page

--- a/bot/index.html
+++ b/bot/index.html
@@ -17,7 +17,7 @@
 
     <h2>Terms of Use:</h2>
     <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.<br>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social meaia).<br><br>Actions: if the bot is being exploited or spammed. The offending server can be blocklisted.</p>
-    <a class="btn" target="_blank" rel="noreferrer noopener" href="https://discord.com/oauth2/authorize?client_id=711582152940060859&permissions=261993005055&redirect_uri=https%3A%2F%2Frevnoplex.github.io%2Fadded-bot&response_type=code&scope=bot%20guilds%20applications.commands">I accept the terms of use</a>
+    <a class="btn" target="_blank" rel="noreferrer noopener" href="/bot/choose-bot">I accept the terms of use</a>
 
     
     <script src="/footer.js"></script>
