it didn't say revnobot beta

--- a/redirects/revnobot-beta.html
+++ b/redirects/revnobot-beta.html
@@ -7,5 +7,5 @@
     <title>Redirecting....</title>
   </head>
 <body>
-    <p>You will be redirected to the OAuth2 page for Revnobot</p>
+    <p>You will be redirected to the OAuth2 page for Revnobot Beta</p>
 </body>
