--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div style="display: inline-block; text-align: center;">
         <h1>Latest Tweet:</h1>
-        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Returning to YouTube soon with new upload on the way<a href="https://twitter.com/hashtag/youtube?src=hash&amp;ref_src=twsrc%5Etfw">#youtube</a> <a href="https://twitter.com/hashtag/Citra?src=hash&amp;ref_src=twsrc%5Etfw">#Citra</a> <a href="https://twitter.com/hashtag/citraEmu?src=hash&amp;ref_src=twsrc%5Etfw">#citraEmu</a> <a href="https://twitter.com/hashtag/emulation?src=hash&amp;ref_src=twsrc%5Etfw">#emulation</a> <a href="https://twitter.com/hashtag/luigismansion2?src=hash&amp;ref_src=twsrc%5Etfw">#luigismansion2</a> <a href="https://twitter.com/hashtag/LuigisMansionDarkMoon?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansionDarkMoon</a> <a href="https://t.co/OQgnpAEN6g">pic.twitter.com/OQgnpAEN6g</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1539571578371198976?ref_src=twsrc%5Etfw">June 22, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">how did i get 100+ subs in under 2 months <a href="https://t.co/RYifnOCewE">pic.twitter.com/RYifnOCewE</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1421792386645053444?ref_src=twsrc%5Etfw">August 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <script src="/footer.js"></script>
     </pre>
