Revert "Update index.html"
This reverts commit 1fb947d0da422cec14e91437ddef3b95ab2f8760.

--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,7 @@
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
-    <h1>Yes IK, the rickroll is broken. Meanwhile: <a href="/media/videos">try here</a></h1>
+    <h1>Don't click on sussy links.</h1>
     <video playsinline autoplay loop width="auto" height="480">
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
