attempt to make rickroll work

--- a/fun/index.html
+++ b/fun/index.html
@@ -19,6 +19,9 @@
     
         Your browser does not support rickrolls. Update ur browser smh.
     </video>
+    <script>
+      document.querySelector('video').play();
+    </script>
     <p>You might have been lucky and only got rickrolled this time, but you might not be so the next time.<br>Don't click on links that look too good to be true</p>
     <script src="/footer.js"></script>
     </pre>
