--- a/fun/index.html
+++ b/fun/index.html
@@ -12,7 +12,7 @@
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
-    <h1>Get Rickrolled LOL</h1>
+    <h1>Don't Click on Sussy Links</h1>
     <video playsinline autoplay loop width="auto" height="480">
         <source src="/media/videos/rickroll.mp4"
                 type="video/mp4">
