redirects to local video if fails

--- a/fun/index.html
+++ b/fun/index.html
@@ -24,7 +24,7 @@
         Your browser does not support rickrolls. Update ur browser smh.\
     </video>`)
       document.querySelector('video').play().catch(function(error) {
-        location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")
+        location.replace("/media/videos/rickroll.mp4")
       });
     </script>
     <p>You might have been lucky and only got rickrolled this time, but you might not be so the next time.<br>Don't click on links that look too good to be true</p>
