update latest video

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <br>
     <pre>
 
-      <p>this page is still in development. Last updated: 22/6/2022</p>
+      <p>this page is still in development. Last updated: 26/6/2022</p>
 
       <div class="vid" style="display:inline-block;">
         <h1>Latest Video:</h1>
-        <iframe width="852" height="480" src="https://www.youtube.com/embed/YRCB6ArnwWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="852" height="480" src="https://www.youtube.com/embed/ppcZxJHkXUo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div style="display: inline-block; text-align: center;">
         <h1>Latest Tweet:</h1>
