update bot name (other commit was empty))

--- a/bot/choose-bot/index.html
+++ b/bot/choose-bot/index.html
@@ -15,9 +15,9 @@
 
     <h1 style="text-align: center;">Choose Which Bot To Add</h1>
 
-    <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot.html">Revnobot</a>
+    <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot/">Revnobot</a>
 
-    <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot-beta.html">Revnobot Beta</a>
+    <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot2/">Revnobot 2</a>
 
     
     <script src="/footer.js"></script>
