create scripts folder for scripts and add rickroll script

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
@@ -24,7 +24,7 @@
     <script>
     document.getElementById("bold").innerHTML = window.location.href;
     </script>
-    <script src="/footer.js"></script>
+    <script src="/scripts/footer.js"></script>
     </pre>
   </body>
 
