--- a/bot/choose-bot/index.html
+++ b/bot/choose-bot/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
@@ -20,6 +20,6 @@
     <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot2/">Revnobot 2</a>
 
     
-    <script src="/footer.js"></script>
+    <script src="/scripts/footer.js"></script>
     </pre>
   </body>
