--- a/bot/index.html
+++ b/bot/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
@@ -20,6 +20,6 @@
     <a class="btn" href="/bot/choose-bot">I accept the terms of use</a>
 
     
-    <script src="/footer.js"></script>
+    <script src="/scripts/footer.js"></script>
     </pre>
   </body>
