--- a/downloads/index.html
+++ b/downloads/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <br>
     <pre>
 
@@ -18,6 +18,6 @@
 
     <p>currently nothing else to download here that isn't something pirated</p>
     
-    <script src="/footer.js"></script>
+    <script src="/scripts/footer.js"></script>
     </pre>
   </body>
