--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -6,7 +6,7 @@
 <title>Thanks for adding bot</title>
 </head>
 <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
@@ -14,6 +14,6 @@
     <h1 style="text-align: center;">Thanks for adding Revnobot</h1>
 
     
-    <script src="/footer.js"></script>
+    <script src="/scripts/footer.js"></script>
     </pre>
 </body>
