--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <script src="/title.js"></script>
+    <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
@@ -23,7 +23,7 @@
         <h1>Latest Tweet:</h1>
         <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Returning to YouTube soon with new upload on the way<a href="https://twitter.com/hashtag/youtube?src=hash&amp;ref_src=twsrc%5Etfw">#youtube</a> <a href="https://twitter.com/hashtag/Citra?src=hash&amp;ref_src=twsrc%5Etfw">#Citra</a> <a href="https://twitter.com/hashtag/citraEmu?src=hash&amp;ref_src=twsrc%5Etfw">#citraEmu</a> <a href="https://twitter.com/hashtag/emulation?src=hash&amp;ref_src=twsrc%5Etfw">#emulation</a> <a href="https://twitter.com/hashtag/luigismansion2?src=hash&amp;ref_src=twsrc%5Etfw">#luigismansion2</a> <a href="https://twitter.com/hashtag/LuigisMansionDarkMoon?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansionDarkMoon</a> <a href="https://t.co/OQgnpAEN6g">pic.twitter.com/OQgnpAEN6g</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1539571578371198976?ref_src=twsrc%5Etfw">June 22, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
-      <script src="/footer.js"></script>
+      <script src="/scripts/footer.js"></script>
     </pre>
   </body>
 
