fixed typo and improved layout of terms of use page

--- a/bot/index.html
+++ b/bot/index.html
@@ -16,7 +16,7 @@
     <h1 style="text-align: center;">Add Revnobot</h1>
 
     <h2>Terms of Use:</h2>
-    <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.<br>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social meaia).<br><br>Actions: if the bot is being exploited or spammed. The offending server can be blocklisted.</p>
+    <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</p><p>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social media).</p><h4>Actions:</h4><p>If the bot is being exploited or spammed. The offending server can be blocklisted.</p>
     <a class="btn" href="/bot/choose-bot">I accept the terms of use</a>
 
     
