remove 2nd bot and add checkbox

--- a/bot/index.html
+++ b/bot/index.html
@@ -17,7 +17,8 @@
 
     <h2>Terms of Use:</h2>
     <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</p><p>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social media).</p><h4>Actions:</h4><p>If the bot is being exploited or spammed. The offending server can be blocklisted.</p>
-    <a class="btn" href="/bot/choose-bot">I accept the terms of use</a>
+    <input type="checkbox" id="terms" name="terms" value="accept"><label for="terms"> I accept the terms of use</label><br>
+    <a id="addBotLink" class="btn" target="_blank" rel="noreferrer noopener" href="">Add Bot</a>
 
     
     <script src="/scripts/footer.js"></script>
