test new script again...

--- a/bot/index.html
+++ b/bot/index.html
@@ -19,7 +19,7 @@
     <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</p><p>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social media).</p><h4>Actions:</h4><p>If the bot is being exploited or spammed. The offending server can be blocklisted.</p>
     <input type="checkbox" id="terms" name="terms" value="accept"><label for="terms"> I accept the terms of use</label><br>
     <div id="addBot">
-        <p id="addBotLink" class="btn">Add Bot</p>
+        <p id="addBotLink" class="disabledBtn">Add Bot</p>
     </div>
     <script src="/bot/checker.js"></script>
 
