--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     <h4><a class="btn" href="/">Go Back To Main Page</a></h4>
     
     <script>
-    document.getElementById("bold").innerHTML = window.location.href;
+    document.getElementById("bold").innerHTML = window.location.pathname;
     </script>
     <script src="/scripts/footer.js"></script>
     </pre>
