Updated latest tweet and video

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <p>this page is still in development. Last updated: 26/6/2022</p>
 
       <div class="vid" style="display:inline-block;">
-        <h1>Latest Video:</h1>
-        <iframe width="852" height="480" src="https://www.youtube.com/embed/ppcZxJHkXUo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Featued YouTube Video:</h1>
+        <iframe width="852" height="480" src="https://www.youtube.com/embed/OSnveMc77ss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div style="display: inline-block; text-align: center;">
         <h1>Latest Tweet:</h1>
-        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Returning to YouTube soon with new upload on the way<a href="https://twitter.com/hashtag/youtube?src=hash&amp;ref_src=twsrc%5Etfw">#youtube</a> <a href="https://twitter.com/hashtag/Citra?src=hash&amp;ref_src=twsrc%5Etfw">#Citra</a> <a href="https://twitter.com/hashtag/citraEmu?src=hash&amp;ref_src=twsrc%5Etfw">#citraEmu</a> <a href="https://twitter.com/hashtag/emulation?src=hash&amp;ref_src=twsrc%5Etfw">#emulation</a> <a href="https://twitter.com/hashtag/luigismansion2?src=hash&amp;ref_src=twsrc%5Etfw">#luigismansion2</a> <a href="https://twitter.com/hashtag/LuigisMansionDarkMoon?src=hash&amp;ref_src=twsrc%5Etfw">#LuigisMansionDarkMoon</a> <a href="https://t.co/OQgnpAEN6g">pic.twitter.com/OQgnpAEN6g</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1539571578371198976?ref_src=twsrc%5Etfw">June 22, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">It costed too much for twitter to do this? Anyway this will move most people away from SMS 2fa which is less secure than other 2fa methods <a href="https://t.co/AGSndnlg6n">https://t.co/AGSndnlg6n</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1627114600998248448?ref_src=twsrc%5Etfw">February 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <script src="/scripts/footer.js"></script>
     </pre>
